; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/tests/extr_celp_math.c_IsAlmostEqual.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/tests/extr_celp_math.c_IsAlmostEqual.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float, float, float)* @IsAlmostEqual to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @IsAlmostEqual(float %0, float %1, float %2) #0 {
  %4 = alloca float, align 4
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  store float %0, float* %4, align 4
  store float %1, float* %5, align 4
  store float %2, float* %6, align 4
  %11 = load float, float* %4, align 4
  %12 = load float, float* %5, align 4
  %13 = fsub float %11, %12
  %14 = call float @llvm.fabs.f32(float %13)
  store float %14, float* %7, align 4
  %15 = load float, float* %4, align 4
  %16 = call float @llvm.fabs.f32(float %15)
  store float %16, float* %8, align 4
  %17 = load float, float* %5, align 4
  %18 = call float @llvm.fabs.f32(float %17)
  store float %18, float* %9, align 4
  %19 = load float, float* %9, align 4
  %20 = load float, float* %8, align 4
  %21 = fcmp ogt float %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %3
  %23 = load float, float* %9, align 4
  br label %26

24:                                               ; preds = %3
  %25 = load float, float* %8, align 4
  br label %26

26:                                               ; preds = %24, %22
  %27 = phi float [ %23, %22 ], [ %25, %24 ]
  store float %27, float* %10, align 4
  %28 = load float, float* %7, align 4
  %29 = load float, float* %10, align 4
  %30 = load float, float* %6, align 4
  %31 = fmul float %29, %30
  %32 = fcmp ole float %28, %31
  %33 = zext i1 %32 to i32
  %34 = call i32 @av_assert0(i32 %33)
  ret void
}

; Function Attrs: nounwind readnone speculatable willreturn
declare float @llvm.fabs.f32(float) #1

declare dso_local i32 @av_assert0(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
